--- a/public/client.html
+++ b/public/client.html
@@ -98,7 +98,7 @@
     <script src="http://localhost:3400/socket.io/socket.io.js"></script>
     <script>
         // Socket code in client 
-        const socket = io();
+        const socket = io("https://buzzit-7z5s.onrender.com");
         // get users @
         const username = prompt("Enter your @:");
         // emit the username to the server
